--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,9 +80,10 @@ dependencies {
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
+    //noinspection DifferentStdlibGradleVersion
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -94,7 +95,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    def solarthingVersion = "09ba7d562b".substring(0, 10)
+    def solarthingVersion = "db08ed06ac27699c7810c1ae2bd12abe95aa13f8".substring(0, 10)
 
     //noinspection GradleDependency // Since we use pre-releases, we don't need Android Studio warning us about this
     implementation "com.github.wildmountainfarms.solarthing:core:$solarthingVersion"
