--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.32'
+    ext.kotlin_version = '1.5.31' // https://kotlinlang.org/docs/releases.html
 //    ext.materialDrawerVersion = '8.0.1' // we'll eventually have to migrate: https://github.com/mikepenz/MaterialDrawer/blob/develop/MIGRATION.md
     ext.materialDrawerVersion = '7.0.0'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,7 +20,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     configurations.all {
         // Check for updates every build
@@ -32,6 +32,7 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 wrapper {
-    gradleVersion = '7.0.2'
+    // https://gradle.org/releases/
+    gradleVersion = '7.2'
     distributionType = Wrapper.DistributionType.ALL
 }
